--- a/client/Android/FreeRDPCore/res/values-nl/strings.xml
+++ b/client/Android/FreeRDPCore/res/values-nl/strings.xml
@@ -105,6 +105,10 @@
     <string name="settings_enable_3g_settings">3G Instellingen</string>
     <string name="settings_screen_3g">3G Scherm</string>
     <string name="settings_performance_3g">3G Prestatie</string>
+    <string name="settings_cat_gateway">Gateway</string>
+    <string name="settings_enable_gateway_settings">Enable Gateway</string>
+    <string name="settings_gateway_settings">Gateway Settings</string>    
+    <string name="settings_redirect_sdcard">Redirect SDCard</string>
     <string name="settings_security">Beveiliging</string>
     <string-array name="security_array">
         <item>Automatisch</item>
