--- a/README
+++ b/README
@@ -8,10 +8,12 @@ interoperability can finally liberate your computing experience.
 Resources
 ---------
 
-Website: http://www.freerdp.com/
-Wiki: https://github.com/FreeRDP/FreeRDP/wiki
+Project website: http://www.freerdp.com/
+Issue tracker: https://github.com/FreeRDP/FreeRDP/issues
 Sources: https://github.com/FreeRDP/FreeRDP/
-API doc: http://www.freerdp.com/api/
+Wiki: https://github.com/FreeRDP/FreeRDP/wiki
+Downloads and other resources: http://pub.freerdp.com
+API doc: http://pub.freerdp.com/api/
 
 IRC channel: #freerdp @ irc.freenode.net
 Mailing list: https://lists.sourceforge.net/lists/listinfo/freerdp-devel
