Add Fit Screen option to resolution settings There may be times where users want to have the desktop resolution match the device resolution on a small screen. The change adds the option without changing existing functionality of the automatic resolution setting.
Also included localized text strings for the new option and addressed some issues with string
comparison in non en-US locales.

--- a/client/Android/FreeRDPCore/res/values-es/strings.xml
+++ b/client/Android/FreeRDPCore/res/values-es/strings.xml
@@ -64,9 +64,11 @@
     </string-array>
     <string name="settings_resolution">Resolucion</string>
     <string name="resolution_automatic">Automatico</string>
+    <string name="resolution_fit">Pantalla</string>
     <string name="resolution_custom">Manual</string>
     <string-array name="resolutions_array">
         <item>Automatico</item>
+        <item>Ajuste a la pantalla</item>
         <item>Manual</item>
         <item>640x480</item>
         <item>720x480</item>
@@ -79,6 +81,7 @@
     </string-array>
     <string-array name="resolutions_values_array">
         <item>automatico</item>
+        <item>pantalla</item>
         <item>manual</item>
         <item>640x480</item>
         <item>720x480</item>
