--- a/client/Android/FreeRDPCore/res/values-nl/strings.xml
+++ b/client/Android/FreeRDPCore/res/values-nl/strings.xml
@@ -79,10 +79,12 @@
         <item>1920x1080</item>
         <item>1920x1200</item>
     </string-array>
+    <!-- The strings in resolutions_values_array should not be localized -->
+    <!-- They are used for text comparison and must remain in english -->
     <string-array name="resolutions_values_array">
-        <item>Automatisch</item>
-        <item>Schermvullend</item>
-        <item>Aangepast</item>
+        <item>automatic</item>
+        <item>fitscreen</item>
+        <item>custom</item>
         <item>640x480</item>
         <item>720x480</item>
         <item>800x600</item>
@@ -92,6 +94,7 @@
         <item>1920x1080</item>
         <item>1920x1200</item>
     </string-array>
+    <!-- end protected string section -->
     <string name="settings_width">Breedte</string>
     <string name="settings_height">Hoogte</string>
     <string name="settings_performance">Prestatie</string>
